src/objects/Competitive_Product__c.object
<CustomObject>
    <description>Specs of Motorola and Competitor&apos;s products</description>
    <fields>
        <fullName>ASP_Range__c</fullName>
        <formula>IF(ASP__c &gt; 0, &apos;$&apos; &amp; (TEXT(ROUND(ASP__c - 5, 0)) &amp; &apos; - &apos; &amp; &apos;$&apos; &amp; TEXT(ROUND(ASP__c + 5, 0))), &apos;NA&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASP Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASP__c</fullName>
        <label>ASP ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accelerometer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accelerometer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analog_TV__c</fullName>
        <label>Analog TV</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audio_Player__c</fullName>
        <label>Audio Player</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barometer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Barometer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Battery_Capacity__c</fullName>
        <label>Battery Capacity (mAh)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bluetooth__c</fullName>
        <label>Bluetooth</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>ACER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALCATEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLVIEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMAZON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMOI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMTEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARCHOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEIDOU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLACKBERRY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CELKON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COOLPAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUJITSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G&apos;FIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIGABYTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIONEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAIER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HASEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HISENSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUAWEI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICEMOBILE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JIAYU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KARBONN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K-TOUCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KYOCERA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPU__c</fullName>
        <label>CPU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Camera_Burst_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Camera Burst Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Camera__c</fullName>
        <label>Camera (MP)</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chipset__c</fullName>
        <label>Chipset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clockspeed__c</fullName>
        <label>Clockspeed (MHz)</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DLNA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DLNA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Device_Picture__c</fullName>
        <description>URL to device picture</description>
        <label>Device Picture</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dimensions__c</fullName>
        <formula>IF(ISBLANK(X__c), &apos;-&apos;, TEXT(X__c)) &amp; &apos; X &apos; &amp; IF(ISBLANK(Y__c), &apos;-&apos;, TEXT(Y__c)) &amp; &apos; X &apos; &amp; IF(ISBLANK(Z__c), &apos;-&apos;, TEXT(Z__c))</formula>
        <label>Dimensions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Resolution__c</fullName>
        <label>Display Resolution</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Size__c</fullName>
        <label>Display Size</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Technology__c</fullName>
        <label>Display Technology</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display__c</fullName>
        <description>comma separated list</description>
        <formula>SUBSTITUTE(
 SUBSTITUTE(
  SUBSTITUTE(
   IF(ISBLANK(Display_Size__c), &apos;&apos;, &apos;{&apos; &amp; TEXT(Display_Size__c) &amp; &apos;&quot;}&apos;) &amp;
   IF(ISBLANK(Display_Technology__c), &apos;&apos;, &apos;{&apos; &amp; Display_Technology__c &amp; &apos;}&apos;) &amp;
   IF(ISBLANK(Display_Resolution__c), &apos;&apos;, &apos;{&apos; &amp; Display_Resolution__c &amp; &apos;}&apos;),
  &apos;}{&apos;,&apos;, &apos;),
 &apos;{&apos;,&apos;&apos;),
&apos;}&apos;,&apos;&apos;)</formula>
        <label>Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <picklist>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smartphone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dual_SIM__c</fullName>
        <label>Dual SIM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDGE__c</fullName>
        <label>EDGE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entry_Period_Diff__c</fullName>
        <formula>IF(TEXT(Entry_Period__c) == &apos;&apos;,
   0,
   TODAY() - DATE(VALUE(RIGHT(TEXT(Entry_Period__c), 4)), CASE(LEFT(TEXT(Entry_Period__c), 2), &apos;Q1&apos;, 1, &apos;Q2&apos;, 4, &apos;Q3&apos;, 7, &apos;Q4&apos;, 10, 1), 1)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entry Period Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entry_Period_Reversed__c</fullName>
        <formula>IF(TEXT(Entry_Period__c) != &apos;&apos;,
   RIGHT(TEXT(Entry_Period__c), 4) &amp; &apos; &apos; &amp; LEFT(TEXT(Entry_Period__c), 2),
   TEXT(Entry_Period__c))</formula>
        <label>Entry Period Reversed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Period__c</fullName>
        <label>Entry Period</label>
        <picklist>
            <picklistValues>
                <fullName>Q4 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2010</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Experiences__c</fullName>
        <label>Experiences</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Memory_Inbox__c</fullName>
        <label>External Memory Inbox</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flash__c</fullName>
        <label>Flash</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focus__c</fullName>
        <label>Focus</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Factor__c</fullName>
        <label>Form Factor</label>
        <picklist>
            <picklistValues>
                <fullName>BAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLAMSHELL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QWERTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QWERTY TOUCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QWERTY TOUCH SLIDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLIDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOUCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOUCH SLIDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNCONFIRMED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GPRS__c</fullName>
        <label>GPRS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPS__c</fullName>
        <label>GPS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPU__c</fullName>
        <label>GPU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HD_Video_Call__c</fullName>
        <label>HD Video Call</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSDPA__c</fullName>
        <label>HSDPA</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Secondary_Camera__c</fullName>
        <formula>NOT(ISBLANK(Secondary_Camera__c))</formula>
        <label>Has Secondary Camera?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotspot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hotspot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPXX__c</fullName>
        <label>IPXX</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instant_Camera__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Instant Camera</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integrated_Phone_Experience__c</fullName>
        <label>Integrated Phone Experience</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <label>Java</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_Proof__c</fullName>
        <formula>IF(AND(Scratch_Resistant__c == true, CONTAINS(IPXX__c, &apos;IP&apos;)), IPXX__c,
 IF(AND(Scratch_Resistant__c == true, Water_Repellent__c == true), &apos;Scratch Resistant, Water Repellent&apos;, 
  IF(Scratch_Resistant__c == true, &apos;Scratch Resistant&apos;, 
   IF(CONTAINS(IPXX__c, &apos;IP&apos;), IPXX__c, 
    IF(Water_Repellent__c == true, &apos;Water Repellent&apos;, &apos;NO&apos;)))))</formula>
        <label>Life Proof</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_Touch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi Touch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NFC__c</fullName>
        <label>NFC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Colors__c</fullName>
        <label>No of Colors</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OS_Upgrade__c</fullName>
        <label>Upgrade OS</label>
        <picklist>
            <picklistValues>
                <fullName>Android OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v2.1 (Éclair)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v2.2.1 (Froyo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v2.2 (Froyo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v2.3.3 (Gingerbread)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v2.3.4 (Gingerbread)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v2.3.5 (Gingerbread)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v2.3.6 (Gingerbread)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v2.3 (Gingerbread)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v3.0 (Honeycomb)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v4.0 (Ice Cream Sandwich)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v4.1 (Jelly Bean)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v4.2 (Jelly Bean)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v4.3 (Jelly Bean)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v4.4.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v4.4 (KitKat)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bada OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bada v2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackberry OS 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlackBerry OS 10.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlackBerry OS 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackberry OS 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackberry OS 7.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackberry Tablet OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREW 3.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREW OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firefox OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS 6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OS_Version_Number__c</fullName>
        <description>Get major OS Version Number for color coding in the report</description>
        <formula>IF(OR(ISPICKVAL(OS__c, &apos;&apos;), NOT(BEGINS(TEXT(OS__c), &apos;Android OS, v&apos;))), 0.0, VALUE(MID(TEXT(OS__c), 14,  3)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Android Version Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>Launch OS</label>
        <picklist>
            <picklistValues>
                <fullName>Android OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v2.1 (Éclair)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v2.2.1 (Froyo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v2.2 (Froyo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v2.3.3 (Gingerbread)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v2.3.4 (Gingerbread)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v2.3.5 (Gingerbread)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v2.3.6 (Gingerbread)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v2.3 (Gingerbread)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v3.0 (Honeycomb)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v4.0 (Ice Cream Sandwich)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v4.1 (Jelly Bean)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v4.2 (Jelly Bean)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v4.3 (Jelly Bean)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v4.4.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android OS, v4.4 (KitKat)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bada OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bada v2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackberry OS 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlackBerry OS 10.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlackBerry OS 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackberry OS 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackberry OS 7.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackberry Tablet OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREW 3.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREW OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firefox OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS 6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operator_ATT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AT&amp;T</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operator_Sprint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sprint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operator_T_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T-Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operator_US_Cellular__c</fullName>
        <defaultValue>false</defaultValue>
        <label>US Cellular</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operator_Verizon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verizon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operators__c</fullName>
        <description>comma separated list of Operators</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(IF(Operator_ATT__c == true, &apos;{AT&amp;T}&apos;, &apos;&apos;) &amp;
                                 IF(Operator_Sprint__c == true, &apos;{Sprint}&apos;, &apos;&apos;) &amp;
                                 IF(Operator_T_Mobile__c == true, &apos;{T-Mobile}&apos;, &apos;&apos;) &amp;
                                 IF(Operator_US_Cellular__c == true, &apos;{US Cellular}&apos;, &apos;&apos;) &amp;
                                 IF(Operator_Verizon__c == true, &apos;{Verizon}&apos;, &apos;&apos;),
                      &apos;}{&apos;,&apos;,&apos;),
           &apos;{&apos;,&apos;&apos;),
&apos;}&apos;,&apos;&apos;)</formula>
        <label>Operators</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POP_IMAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POP / IMAP Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Video_Frame_Rate__c</fullName>
        <label>Primary Video Frame Rate</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Processor_Cores__c</fullName>
        <label>Processor Cores</label>
        <picklist>
            <picklistValues>
                <fullName>Single Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Core Multithreading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual Core Multithreading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quad Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quad Core Multithreading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Octa Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Octa Core Multithreading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hexa Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hexa Core Multithreading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Processor__c</fullName>
        <description>comma separated value</description>
        <formula>SUBSTITUTE(
 SUBSTITUTE(
  SUBSTITUTE(
   IF(ISBLANK(Chipset__c), &apos;&apos;, &apos;{&apos; &amp; Chipset__c &amp; &apos;}&apos;) &amp;
   IF(ISBLANK(Clockspeed__c), &apos;&apos;, &apos;{&apos; &amp; TEXT(Clockspeed__c) &amp; &apos; MHz}&apos;) &amp;
   IF(ISBLANK(CPU__c), &apos;&apos;, &apos;{&apos; &amp; CPU__c &amp; &apos;}&apos;) &amp;
   IF(ISPICKVAL(Processor_Cores__c, &apos;&apos;), &apos;&apos;, &apos;{&apos; &amp; TEXT(Processor_Cores__c) &amp; &apos;}&apos;),
  &apos;}{&apos;,&apos;, &apos;),
 &apos;{&apos;,&apos;&apos;),
&apos;}&apos;,&apos;&apos;)</formula>
        <label>Processor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proximity_Sensor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proximity Sensor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RAM_Size__c</fullName>
        <label>RAM (MB)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROM__c</fullName>
        <label>ROM (GB)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radio__c</fullName>
        <label>Radio</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Asia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_China__c</fullName>
        <defaultValue>false</defaultValue>
        <label>China</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Global__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_India__c</fullName>
        <defaultValue>false</defaultValue>
        <label>India</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_LATAM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LATAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_NAM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_NPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_WE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <description>Comma separated list of Regions</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(IF(Region_Asia__c == true, &apos;{Asia}&apos;, &apos;&apos;) &amp;
                                 IF(Region_China__c == true, &apos;{China}&apos;, &apos;&apos;) &amp;
                                 IF(Region_Global__c == true, &apos;{Global}&apos;, &apos;&apos;) &amp;
                                 IF(Region_India__c == true, &apos;{India}&apos;, &apos;&apos;) &amp;
                                 IF(Region_LATAM__c == true, &apos;{LATAM}&apos;, &apos;&apos;) &amp;
                                 IF(Region_NAM__c == true, &apos;{NAM}&apos;, &apos;&apos;) &amp;
                                 IF(Region_NPI__c == true, &apos;{NPI}&apos;, &apos;&apos;) &amp;
                                 IF(Region_WE__c == true, &apos;{WE}&apos;, &apos;&apos;),
                      &apos;}{&apos;,&apos;, &apos;),
           &apos;{&apos;,&apos;&apos;),
&apos;}&apos;,&apos;&apos;)</formula>
        <label>Regions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_Card_Support__c</fullName>
        <label>SD Card Support</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scratch_Resistant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scratch Resistant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Camera__c</fullName>
        <label>Secondary Camera</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Display__c</fullName>
        <label>Secondary Display</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Networking__c</fullName>
        <label>Social Networking</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standby__c</fullName>
        <label>Standby (Hrs)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TV_OUT__c</fullName>
        <label>TV-OUT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Talktime__c</fullName>
        <label>Talktime (Mins)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>